<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreparationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="Commencer la \npreparation"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nbrclient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/read"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/totaldattes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="4dp"

                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/caf"

                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/truffe"

                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pistache"

                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/noix_de_coco"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/speculos"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/caramel_beurre_sal"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pralin"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/amande_gout_rose"

                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/amande_gout_orange"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/citron"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gingember_citron_vert"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/framboise"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/caramel_chocolate"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/amande_rose"

                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/amande_orange"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/amande_gingembre"
                android:textAppearance="?android:attr/textAppearanceSmall"

                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/amande_kaab_ghzal"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/pistache_beldi"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/principale1" />


    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvadapter"
            android:layout_width="150dp"
            android:layout_height="match_parent"

            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewCol1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"

            android:text="Total"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCol2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol12"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol13"
            android:layout_width="fill_parent"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol14"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol15"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol16"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol17"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol18"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />

        <TextView
            android:id="@+id/textViewCol19"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/principale1" />


    </LinearLayout>

</LinearLayout>

</LinearLayout>